test/fail/jvm_retvar01.v3
//@execute 0=0; 1=0; 2=0
class A {
	def r() -> (int, A, A) { return (11, A.new(), A.new()); }
}
class B extends A {
	def r() -> (int, B, B) { return (12, B.new(), B.new()); }
}

def main(arg: int) -> int {
	var o = if(arg == 0, A.new(), B.new());
	var r = o.r();
	return if(r.1 == r.2, 1, 0);
}
